--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Database Configuration
 DATABASE_URL=postgresql://postgres:your_password@db.your_project_ref.supabase.co:5432/postgres?sslmode=require
 
+# JWT Configuration (Optional)
+# For production, set your JWT secret key. Leave empty for development mode.
+# JWT_SECRET=your-jwt-secret-key
+
 # Server Configuration
 PORT=8080
 GIN_MODE=debug
+
+# Environment
+ENV=development
